Change .box color from blue to greenColor
Updated tcolor change he color of the .box class from blue to green.

--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ body{
     border: none;
     box-shadow: 0 0 1rem rgba(0,0,0.3);
     font-size: 7vmin;
-    color: blue;
+    color: green;
 
 }
 
    
+
