--- a/style.css
+++ b/style.css
@@ -47,9 +47,10 @@ body{
     border: none;
     box-shadow: 0 0 1rem rgba(0,0,0.3);
     font-size: 7vmin;
-    color: green;
+    color: blue;
 
 }
 
    
+
 
